# agent-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  policy.example.yaml  pyproject.toml  release.toml
.claude/: audit-rules.yaml  audit-suppressions.yaml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/workflows/: audit_suppress.py  post-edit-review.sh  pre-commit-review.sh  weekly-deep-audit.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-check.yml
crates/agent-guard-cli/: Cargo.toml
crates/agent-guard-cli/src/: main.rs
crates/agent-guard-core/: Cargo.toml
crates/agent-guard-core/benches/: policy_check.rs
crates/agent-guard-core/src/: attestation.rs  audit.rs  decision.rs  file_paths.rs  lib.rs  payload.rs  policy.rs  tests.rs  types.rs
crates/agent-guard-node/: .gitignore  CLAUDE.md  Cargo.toml  README.md  adapters.js  index.d.ts  index.js  package-lock.json  package.json  runtime.d.ts  runtime.js  test-adapters.js  test-frameworks.js  test.js
crates/agent-guard-node/demos/: demo_check_vs_enforce.js  demo_langchain.js  demo_multi_tool_flow.js  demo_openai_handler.js  demo_outbound_gate.js  demo_side_effect_wedge.js
crates/agent-guard-node/examples/attack-demo/: README.md  app.js
crates/agent-guard-node/examples/chatgpt-actions/: README.md  openapi.yaml  policy.yaml  server.js
crates/agent-guard-node/examples/quickstart/: README.md  app.js
crates/agent-guard-node/src/: lib.rs
crates/agent-guard-python/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
crates/agent-guard-python/examples/: demo_langchain.py
crates/agent-guard-python/python/agent_guard/: __init__.py  adapters.py  langchain.py  openai.py
crates/agent-guard-python/python/agent_guard/libagent_guard.dylib.dSYM/Contents/: Info.plist
crates/agent-guard-python/src/: error.rs  lib.rs  types.rs
crates/agent-guard-python/tests/: real_runtime_validation.py  test_guard.py  test_langchain_adapter.py  test_openai_adapter.py  test_real_frameworks.py  test_runtime.py
crates/agent-guard-sandbox/: CLAUDE.md  Cargo.toml
crates/agent-guard-sandbox/src/: landlock.rs  lib.rs  linux.rs  macos.rs  noop.rs  windows.rs  windows_appcontainer.rs
crates/agent-guard-sandbox/tests/: macos_integration.rs  seccomp_integration.rs  windows_job_integration.rs
crates/agent-guard-sdk/: CLAUDE.md  Cargo.toml
crates/agent-guard-sdk/benches/: audit_write.rs  runtime_decision.rs
crates/agent-guard-sdk/examples/: anomaly_test.rs  audit_demo.rs  content_policy.rs  dashboard.rs  demo_comparison.rs  demo_happy_path.rs  demo_malicious_block.rs  demo_transparency.rs  doctor.rs  macos_sandbox.rs  metrics_snapshot.rs  parity_runner.rs  policy_demo.rs  provenance_receipt.rs  quickstart.rs  windows_sandbox.rs
crates/agent-guard-sdk/src/: anomaly.rs  approval.rs  audit_writer.rs  content_filter.rs  doctor.rs  enforce.rs  executors.rs  guard.rs  guard_helpers.rs  lib.rs  metrics.rs  policy_signing.rs  provenance.rs  runtime.rs  sandbox_resolution.rs  siem.rs
crates/agent-guard-sdk/tests/: approval_resume.rs  audit_async_integration.rs  content_enforcement.rs  e2e_full_chain.rs  execute_integration.rs  integration.rs  parity.rs  preset_parse.rs  release_gate.rs  runtime_decision_integration.rs  security_regression.rs  stress_concurrency.rs  stress_resources.rs  stress_security.rs
crates/agent-guard-validators/: CLAUDE.md  Cargo.toml
crates/agent-guard-validators/src/: bash.rs  http.rs  lib.rs  path.rs  tests.rs
crates/agent-guard-validators/src/bash/: destructive.rs  mod.rs  paths.rs  read_only.rs  tables.rs  tests.rs  tokenize.rs  types.rs  wrappers.rs
crates/agent-guard-validators/src/content/: mod.rs  pii.rs  redaction.rs  secrets.rs
crates/guard-hook/: Cargo.toml
crates/guard-hook/src/: hook.rs  main.rs
crates/guard-hook/tests/: hook_e2e.rs
crates/guard-verify/: Cargo.toml
crates/guard-verify/src/: main.rs  report.rs
demos/node/: basic_usage.js
demos/python/: anomaly_demo.py  generic_demo.py  langchain_demo.py
demos/rc/: README.md
docs/: README.md  adapter-contract.md  architecture-and-vision.md  capability-parity.md  deployment-guide.md  framework-support-matrix.md  grafana-dashboard.json  growth-and-adoption-plan.md  m3.1-support-matrix.md  migration-guide.md  node-adapter-gap-report.md  observability.md  phase2-design.md  phase2-done.md  phase3-design.md  phase6-design.md  release-notes-v0.2.0.md  research-appcontainer.md  sales-demo-script.md  sandbox-linux.md  sandbox-macos.md  sandbox-windows.md  security-audit.md  threat-model.md
docs/archive/: README.md  architecture-and-vision.md  growth-and-adoption-plan.md  node-adapter-gap-report.md  phase2-design.md  phase3-design.md  phase6-design.md  phase8-design.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md
docs/audits/: 2026-05-11.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-18.md  2026-05-19.md  2026-05-25-2.md  (+3 more)
examples/: bash_guard_demo.rs  permission_demo.rs  sandbox_demo.rs
hooks/: hooks.json
presets/: README.md  coding-agent-outbound.yaml  coding-agent-outbound.yaml.draft
scripts/: check-version-consistency.sh  check_docs.py  guard-hook-plugin.sh  verify.sh
spikes/agent-guard-unwrap-v1/fidelity/: Cargo.toml
spikes/agent-guard-unwrap-v1/fidelity/src/: main.rs
spikes/sep2828-x402-recompute/: .gitignore  Cargo.toml  README.md
spikes/sep2828-x402-recompute/src/: main.rs
spikes/sep2828-x402-recompute/vectors/generic/step0/: receipt.json
spikes/sep2828-x402-recompute/vectors/generic/step1/: receipt.json
spikes/sep2828-x402-recompute/vectors/keys/: es256_public.pem
spikes/sep2828-x402-recompute/vectors/sui/step0/: receipt.json
spikes/sep2828-x402-recompute/vectors/sui/step1/: receipt.json
src/: bash_validation.rs  config.rs  lib.rs  permission_enforcer.rs  permissions.rs  sandbox.rs  trust_resolver.rs
tests/: integration_test.rs  integration_test_industry_grade.rs
(+59 files in other folders)
