[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
glob = "0.3"
evalexpr = "11"
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus-client = "0.22"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }
