[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0-rc1"
edition = "2021"
license = "MIT"
rust-version = "1.79"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json"] }
uuid = { version = "1.23.0", features = ["v4"] }
regex = "1.12.3"
glob = "0.3.3"
evalexpr = "11.3.1"
arc-swap = "1.9.1"
criterion = "0.5.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
prometheus-client = "0.22.3"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
clap = { version = "4.6.0", features = ["derive"] }
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }
windows = { version = "0.52.0", features = [
    "Win32_Security_Isolation",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_JobObjects",
] }
