[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "agent-guard"
version = "0.2.0-rc1"
requires-python = ">=3.10"
description = "Policy-driven security enforcement SDK for AI agents"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[tool.maturin]
manifest-path = "crates/agent-guard-python/Cargo.toml"
module-name = "agent_guard"
# abi3 wheels are compatible with all CPython >= 3.10
features = ["pyo3/abi3-py310"]
