[package]
name = "agent-guard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agent-guard command-line interface (approval workflow)"

[[bin]]
name = "agent-guard"
path = "src/main.rs"

[dependencies]
agent-guard-sdk = { path = "../agent-guard-sdk", version = "=0.2.0-rc1" }
clap.workspace = true

[dev-dependencies]
tempfile = "3"
