[package]
name = "agent-guard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, policy engine and audit for agent-guard"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
regex.workspace = true
glob.workspace = true
evalexpr.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
