[package]
name = "agent-guard-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js binding for agent-guard via napi-rs"

[lib]
name = "agent_guard_node"
crate-type = ["cdylib"]

# Platform sandbox features, forwarded to the SDK (off by default, like the
# workspace). Build the addon with one of these to let an explicit `backend`
# request resolve to real isolation instead of the truthful "none", e.g.:
# npm run build:debug -- --features seccomp
[features]
macos-sandbox = ["agent-guard-sdk/macos-sandbox"]
seccomp = ["agent-guard-sdk/seccomp"]
landlock = ["agent-guard-sdk/landlock"]

[dependencies]
agent-guard-sdk = { path = "../agent-guard-sdk", version = "=0.2.0-rc2" }
napi = { version = "2.12", features = ["async", "serde-json"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true

[build-dependencies]
napi-build = "2.0"
