[package]
name = "agent-guard-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python binding for agent-guard via PyO3"

[lib]
name = "agent_guard"
crate-type = ["cdylib"]

[dependencies]
agent-guard-sdk = { path = "../agent-guard-sdk" }
tracing-subscriber = { workspace = true }
pyo3 = { version = "0.28", features = ["abi3-py310"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
