[package]
name = "agent-guard-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python binding for agent-guard via PyO3"

[lib]
name = "agent_guard"
crate-type = ["cdylib"]

[dependencies]
agent-guard-sdk = { path = "../agent-guard-sdk", version = "=0.2.0-rc1" }
tracing-subscriber = { workspace = true }
pyo3 = { version = "0.29", features = ["abi3-py310"] }
hex.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
# Platform sandbox features, forwarded to the SDK (off by default, like the
# workspace). Build the module with one of these to let an explicit
# `backend=` request resolve to real isolation instead of the truthful
# "none", e.g.: maturin develop --features extension-module,seccomp
seccomp = ["agent-guard-sdk/seccomp"]
landlock = ["agent-guard-sdk/landlock"]
macos-sandbox = ["agent-guard-sdk/macos-sandbox"]
default = []
