[package]
name = "agent-guard-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandbox execution layer for agent-guard"

[features]
# Enable Linux seccomp-bpf sandbox. Requires libseccomp C library.
# Usage: cargo build --features agent-guard-sandbox/seccomp
seccomp = ["dep:libseccomp"]
# Enable Linux Landlock filesystem isolation (kernel 5.13+).
landlock = ["dep:landlock"]
# Enable experimental macOS sandbox using sandbox-exec (Seatbelt).
macos-sandbox = []
# Enable experimental Windows sandbox using Job Objects.
windows-sandbox = ["dep:windows-sys"]
# Enable experimental Windows AppContainer sandbox.
windows-appcontainer = ["dep:windows"]

[dependencies]
agent-guard-core = { path = "../agent-guard-core", version = "=0.2.0-rc1" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = { version = "0.3", optional = true }
landlock = { version = "0.4", optional = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }
windows = { workspace = true, optional = true }
