[package]
name = "agent-guard-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level SDK for agent-guard policy enforcement"

[features]
# Enable Linux seccomp-bpf sandbox.
seccomp = ["agent-guard-sandbox/seccomp"]
# Enable experimental macOS sandbox using sandbox-exec (Seatbelt).
macos-sandbox = ["agent-guard-sandbox/macos-sandbox"]
# Enable experimental Windows sandbox using Job Objects.
windows-sandbox = ["agent-guard-sandbox/windows-sandbox"]

[dependencies]
agent-guard-core = { path = "../agent-guard-core" }
agent-guard-validators = { path = "../agent-guard-validators" }
agent-guard-sandbox = { path = "../agent-guard-sandbox" }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
prometheus-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
# Make SIEM dependencies non-optional to resolve compilation errors in siem.rs
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
arc-swap.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[dev-dependencies]
rand = "0.8"
