[package]
name = "agent-guard-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level SDK for agent-guard policy enforcement"

[features]
# Enable Linux seccomp-bpf sandbox.
seccomp = ["agent-guard-sandbox/seccomp"]
# Enable Linux Landlock filesystem isolation (kernel 5.13+).
landlock = ["agent-guard-sandbox/landlock"]
# Enable experimental macOS sandbox using sandbox-exec (Seatbelt).
macos-sandbox = ["agent-guard-sandbox/macos-sandbox"]
# Enable experimental Windows sandbox using Job Objects.
windows-sandbox = ["agent-guard-sandbox/windows-sandbox"]
# Enable experimental Windows AppContainer sandbox.
windows-appcontainer = ["agent-guard-sandbox/windows-appcontainer"]

[dependencies]
agent-guard-core = { path = "../agent-guard-core", version = "=0.2.0-rc1" }
agent-guard-validators = { path = "../agent-guard-validators", version = "=0.2.0-rc1" }
agent-guard-sandbox = { path = "../agent-guard-sandbox", version = "=0.2.0-rc1" }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
prometheus-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
sha2.workspace = true
# Make SIEM dependencies non-optional to resolve compilation errors in siem.rs
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
arc-swap.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
criterion.workspace = true
rand = "0.8"
httpmock = "0.7"
tempfile = "3"
# Used only in `audit_write` bench to redirect stdout to /dev/null so the
# stdout-control bench doesn't flood CI logs. Unix-only; bench falls back
# to a no-op on non-unix targets.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[[bench]]
name = "audit_write"
harness = false

[[bench]]
name = "runtime_decision"
harness = false
