[package]
name = "agent-guard-validators"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bash and path validators for agent-guard"

[features]
# Content-layer secret/PII detection (S6-1/S6-2 detectors). Off by default.
# Enabled through the SDK's `content` feature, which wires these detectors
# into the Guard pipeline (outbound write/http surfaces + input text).
content = ["dep:regex"]

[dependencies]
agent-guard-core = { path = "../agent-guard-core", version = "=0.2.0-rc1" }
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = { workspace = true, optional = true }
