[package]
name = "guard-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude Code PreToolUse hook adapter for agent-guard"

[[bin]]
name = "guard-hook"
path = "src/main.rs"

[dependencies]
agent-guard-core = { path = "../agent-guard-core", version = "=0.2.0-rc1" }
agent-guard-sdk = { path = "../agent-guard-sdk", version = "=0.2.0-rc1" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
