[package]
name = "guard-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude Code PreToolUse hook adapter for agent-guard"

[[bin]]
name = "guard-hook"
path = "src/main.rs"

[dependencies]
agent-guard-core = { path = "../agent-guard-core", version = "=0.2.0-rc1" }
# `content` enables the content-layer check stage so a policy with a
# `content:` block (e.g. `write_file.content: { mode: block }`) is enforced
# through the hook. With the shipped outbound preset this is a no-op (its
# write_file content mode is `warn`, which the check-only hook does not act
# on, and WebFetch carries no HTTP body to scan) — it makes the capability
# present for policies that opt into Block-mode content rules.
agent-guard-sdk = { path = "../agent-guard-sdk", version = "=0.2.0-rc1", features = [
    "content",
] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
