[package]
name = "guard-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to verify agent-guard execution receipts"

[[bin]]
name = "guard-verify"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand = "0.8"
chrono.workspace = true
