[package]
name = "guard-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to verify agent-guard execution receipts"

[[bin]]
name = "guard-verify"
path = "src/main.rs"

[dependencies]
agent-guard-core = { path = "../agent-guard-core", version = "=0.2.0-rc1" }
agent-guard-sdk = { path = "../agent-guard-sdk", version = "=0.2.0-rc1" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
chrono.workspace = true
sha2.workspace = true
